text fixes and spacing

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -26,5 +26,5 @@
 }
 
 .expressive-code, [data-callout], .replacer-container {
-	@apply mb-6;
+	@apply mb-8;
 }
